bugfixes:  * home: fixed freeze on reorder  * blog: fixed uneven box-radius and    external links

--- a/src/app/pages/blog/blog.page.scss
+++ b/src/app/pages/blog/blog.page.scss
@@ -19,20 +19,23 @@
     background-color: var(--ion-color-light);
   }
 }
+.blog-container {
+  .blog-card {
+    margin: auto;
+    margin-bottom: 2vh;
+    width: 80vw;
+    height: 15vh;
+    background-size: cover;
+    border-radius: 20px;
 
-.blog-card {
-  width: 100%;
-  height: 15vh;
-  background-size: cover;
-  border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-
-  .title {
-    color: white;
-    font-size: 0.9em;
+    .title {
+      color: white;
+      font-size: 0.9em;
+    }
   }
 }
